...
              <View style={styles.title}>
                <FlowHeading
                  style={styles.headingText}
                  layoutId={`${layerPrefix}.title`}
                >
                  {transparent
                    ? "Transparent Set Unlocked"
                    : "White Background Set Saved"}
                </FlowHeading>
              </View>
              <FlowBody
                style={styles.copy}
                layoutId={`${layerPrefix}.subtitle`}
...
